templates/config/kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PACKAGE_NAME}
  namespace: ${CI_K8S_NAMESPACE_NAME}
  labels:
    app: ${CI_PACKAGE_NAME}
spec:
  type: NodePort
  selector:
    app: ${CI_PACKAGE_NAME}
  ports:
    - port: 80
